@@ -1,4 +1,4 @@
-# last modified 2017-01-12 by J. Fox
+# last modified 2017-01-13 by J. Fox
 
 importFrom(Hmisc, rcorr, print.rcorr)
 importFrom(MASS, stepAIC)
@@ -8,7 +8,7 @@ importFrom(car, showLabels, hccm, linearHypothesis, deltaMethod)
 importFrom(sandwich, vcovHAC)
 importFrom(colorspace, rainbow_hcl)
 importFrom(readxl, read_excel, excel_sheets)
-importFrom(haven, read_sas)
+importFrom(haven, read_sas, read_spss)
 importFrom(graphics, abline, arrows, axis, barplot, box, hist, legend, lines, 
     matplot, mtext, par, plot, points, polygon, strheight, text, title)
 importFrom(grDevices, n2mfrow, palette)
@@ -16,7 +16,7 @@ importFrom(stats, coef, complete.cases, cor, dist, formula, kmeans,
     model.matrix, na.omit, p.adjust, pf, pt, qt, quantile, runif, sd, update)
 
 export(assignCluster, Barplot, bin.var, binVariable, colPercents, DeltaMethod, Dotplot, excel_sheets, Hist, indexplot, KMeans, lineplot, mergeRows, 
-    numSummary, partial.cor, plotDistr, plotMeans, rcorr.adjust, readXL, readSAS, readStata, reliability, rowPercents, 
+    numSummary, partial.cor, plotDistr, plotMeans, rcorr.adjust, readXL, readSAS, readSPSS, readStata, reliability, rowPercents, 
     stepwise, summarySandwich, totPercents,
     dgumbel, pgumbel, qgumbel, rgumbel)
 
